
  [ Simon Quigley ]
  * New upstream release.
  * Update debhelper compat to 11, no changes needed.

  [ Dmitry Shachnev ]
  * Drop patches, applied in the new release:
    - icu60-no-aspirational-scripts.patch
    - icu60-uchar.patch
    - separate-argv.patch
  * Rebase and refresh other patches.
  * Drop three paths from Files-Excluded that have been removed upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 30 Jun 2018 14:37:33 -0500

qtwebengine-opensource-src (5.10.1+dfsg-4) unstable; urgency=medium

  * Backport two upstream patches to fix build with system ICU 60:
    - icu60-no-aspirational-scripts.patch to disallow aspirational scripts.
    - icu60-uchar.patch to fix build when UChar is signed char16_t.
  * Backport upstream patch to fix QtWebEngineProcess resources loading
    (separate-argv.patch, see upstream QTBUG-66346).
  * Update Vcs fields for migration to salsa.debian.org.
  * Update symbols files from buildds’ logs.
  * Bump Standards-Version to 4.1.4, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 13 May 2018 11:50:52 +0300

qtwebengine-opensource-src (5.10.1+dfsg-3) unstable; urgency=medium

  * Update symbols files with buildds' logs.
  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Apr 2018 20:43:19 -0300

qtwebengine-opensource-src (5.10.1+dfsg-2) experimental; urgency=medium

  * Update debian/libqt5webenginecore5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 17 Mar 2018 16:07:29 +0300

qtwebengine-opensource-src (5.10.1+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Backport upstream patch to fix build with ICU 60.
  * Update debian/watch for the new upstream tarball names.
  * Remove items from Files-Excluded which are no longer in the tarball.
  * Refresh other patches.
  * Bump Qt build-dependencies to 5.10.1.
  * Update symbols files from the current build log.